--- a/ToDo/res/values/strings.xml
+++ b/ToDo/res/values/strings.xml
@@ -2,4 +2,6 @@
 <resources>
     <string name="hello">Hello World, ToDo!</string>
     <string name="app_name">ToDo</string>
+    <string name="label_addgroup">+</string>
+    <string name="label_addcontact">+</string>
 </resources>
